// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnstyledButton Component should render the wrapper, start icon, main content, and end icon correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 10,
      },
    ]
  }
  testID="test-id"
>
  <View
    style={
      {
        "marginRight": 5,
      }
    }
  >
    <Image
      source={
        {
          "uri": "startImage",
        }
      }
      style={
        {
          "height": 20,
          "width": 20,
        }
      }
      testID="startIcon"
    />
  </View>
  <View
    style={
      {
        "justifyContent": "center",
      }
    }
  >
    <Text>
      Hello world
    </Text>
    <Text>
      Stinky Tofu
    </Text>
  </View>
  <View
    style={
      {
        "marginLeft": 15,
      }
    }
  >
    <Text
      testID="endIcon"
    >
      ✓
    </Text>
  </View>
</View>
`;

exports[`UnstyledButton Component should render without start and end icons if they are not provided 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
  testID="test-id"
>
  <View>
    <Text>
      Hello world
    </Text>
  </View>
</View>
`;
